fixing overflow

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,6 @@
     height:70px;
 }
 
-html,body{
-    overflow-y: scroll; 
+body{
+    overflow-y:auto
 }
